Bug 94573 - [BDW] gem_evict_everything / swapping- sub test are failing
Summary: [BDW] gem_evict_everything / swapping- sub test are failing
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-16 17:11 UTC by Elio
Modified: 2017-07-24 22:42 UTC (History)
1 user (show)

See Also:
i915 platform: BDW
i915 features:


Attachments

Description Elio 2016-03-16 17:11:34 UTC
The following test of gem_evict_everything are failing:
swapping-hang
swapping-interruptible
swapping-normal

Configuration:

--- Software information ---

 ++ Kernel version                      : 4.4.4-040404-generic
 ++ Linux distribution                  : Ubuntu 15.10
 ++ Architecture                        : 64-bit
 
 ++ xf86-video-intel version            : 2.99.917
 ++ Xorg-Xserver version                : 1.17.2
 ++ DRM version                         : 2.4.64
 ++ VAAPI version                       : Intel i965 driver for Intel(R) Broadwell - 1.6.0
 ++ Cairo version                       : 1.14.2
 ++ Intel GPU Tools version             : Tag [intel-gpu-tools-1.14-74-g431f6c4] / Commit [431f6c4]
 ++ Kernel driver in use                : i915
 ++ Bios revision                       : 5.6


 --- Hardware information ---

 ++ Platform                            :
 ++ Motherboard model                   :
 ++ Motherboard type                    : NUC5i7RYB Desktop
 ++ Motherboard manufacturer            :
 ++ CPU family                          : Core i7
 ++ CPU information                     : Intel(R) Core(TM) i7-5557U CPU @ 3.10GHz
 ++ GPU Card                            : Intel Corporation Broadwell-U Integrated Graphics (rev 09) (prog-if 00 [VGA controller])
 ++ Memory ram                          : 8 GB
 ++ Maximum memory ram allowed          : 16 GB
 ++ Display resolution                  :
 ++ CPU's number                        : 4
 ++ Hard drive capacity                 : 120 GB


Output:
./gem_evict_everything --run-subtest swapping-hang
IGT-Version: 1.14-g431f6c4 (x86_64) (Linux: 4.4.4-040404-generic x86_64)
(gem_evict_everything:1214) igt-gt-CRITICAL: Test assertion failure function eat_error_state, file igt_gt.c:231:
(gem_evict_everything:1214) igt-gt-CRITICAL: Failed assertion: write(fd, "", 1) == 1
(gem_evict_everything:1214) igt-gt-CRITICAL: Last errno: 4, Interrupted system call
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [igt_post_hang_ring+0xfd]
  #2 [igt_fork_hang_helper+0xa0]
  #3 [__real_main183+0x713]
  #4 [main+0x23]
  #5 [__libc_start_main+0xf0]
  #6 [_start+0x29]
  #7 [<unknown>+0x29]
Test gem_evict_everything failed.
**** DEBUG ****
(gem_evict_everything:1212) drmtest-DEBUG: Test requirement passed: fd >= 0
(gem_evict_everything:1212) drmtest-DEBUG: Test requirement passed: fd >= 0
(gem_evict_everything:1212) igt-gt-DEBUG: Test requirement passed: !(gen < 5)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: has_ban_period
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: has_gpu_reset(fd)
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: ctx == 0 || ring == I915_EXEC_RENDER
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: has_ban_period
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: has_gpu_reset(fd)
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: ctx == 0 || ring == I915_EXEC_RENDER
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: has_ban_period
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: has_gpu_reset(fd)
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: ctx == 0 || ring == I915_EXEC_RENDER
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: has_ban_period
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: has_gpu_reset(fd)
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: ctx == 0 || ring == I915_EXEC_RENDER
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: has_ban_period
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: has_gpu_reset(fd)
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: ctx == 0 || ring == I915_EXEC_RENDER
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: has_ban_period
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: has_gpu_reset(fd)
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: ctx == 0 || ring == I915_EXEC_RENDER
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_evict_everything:1214) ioctl-wrappers-DEBUG: Test requirement passed: has_ban_period
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: has_gpu_reset(fd)
(gem_evict_everything:1214) igt-gt-DEBUG: Test requirement passed: ctx == 0 || ring == I915_EXEC_RENDER
(gem_evict_everything:1214) igt-gt-CRITICAL: Test assertion failure function eat_error_state, file igt_gt.c:231:
(gem_evict_everything:1214) igt-gt-CRITICAL: Failed assertion: write(fd, "", 1) == 1
(gem_evict_everything:1214) igt-gt-CRITICAL: Last errno: 4, Interrupted system call
****  END  ****
Subtest swapping-hang: FAIL
Comment 1 Chris Wilson 2016-03-17 10:14:54 UTC
commit 34098b71fa1b365ffb0c12fb84ebb7aa26c8f300
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Mar 17 09:53:45 2016 +0000

    lib/igt_gt: Handle SIGINT whilst writing to i915_error_state
    
    Becareful in case we try and eat the error state whilst interrupts are
    being sent and repeat the write() until we finish uninterrupted.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=94573
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.